# slam

./: .gitignore  CLAUDE.md  CMakeLists.txt  net_init.sh  package.xml
.claude/skills/slam-bringup/: SKILL.md
.claude/skills/slam-mapmon/: SKILL.md
.claude/skills/slam-shutdown/: SKILL.md
AprilTagLocalization/: tags.yaml
AprilTagLocalization/launch/: apriltag_localization.launch
AprilTagLocalization/src/: apriltag_localization.cpp
cmake/env-hooks/: 99.slam_gazebo_paths.sh.em
config/: global_map.yaml
docs/: PROGRESS.md  agent_contract.md  implementation.md  remote.md  robot_commands.md  slam_commands.md  world_ground_truth.md
docs/progress/: 2026-04.md  2026-05.md  2026-06.md
graph_planner/launch/: graph_planner.launch
graph_planner/src/: graph_planner.cpp
launch/: apriltag_global_localization.launch  arm_home.launch  mission_rviz.launch  mission_viz.launch  pickup_point_estimator.launch  rtab_wheel_viz.launch  storefront_data_collection.launch  wheel_odom.launch  yolo_pose_tag_detector.launch
local_costmap_generator/launch/: run.launch
local_costmap_generator/src/: heightmap.cpp
localization_manager/: CMakeLists.txt.legacy  package.xml.legacy
localization_manager/launch/: apriltag_pipeline.launch  apriltag_realsense.launch  localization_manager.launch
localization_manager/scripts/: localization_manager_node.py
my_rtabmap/: CMakeLists.txt.legacy  package.xml.legacy
my_rtabmap/launch/: eval.launch  rtabmap.launch  rtabmap_realsense.launch
nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_description/: urdf.rviz
nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_description/launch/: nexus_4wd_mecanum_description.launch  nexus_4wd_mecanum_rviz.launch
nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_description/urdf/: nexus_4wd_mecanum.xacro  test.urdf
nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_gazebo/: CMakeLists.txt.legacy
nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_gazebo/cmake/env-hooks/: 99.gazebo_paths.sh.em
nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_gazebo/launch/: nexus_4wd_mecanum_multi.launch  nexus_4wd_mecanum_world.launch  re540_bringup.launch  spawn_one_nexus_4wd_mecanum.launch
nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_gazebo/media/materials/programs/: triplanar.frag  triplanar.vert
nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_gazebo/media/materials/scripts/: race_track.material
nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_gazebo/src/: gt_odom_publisher.py  true_pose_marker.py
nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_gazebo/worlds/: obstacles_static.world
nexus_4wd_mecanum_simulator/realsense_gazebo_plugin/urdf/: _d435.urdf.xacro
re540_final_map/: CMakeLists.txt.legacy
re540_final_map/cmake/env-hooks/: 99.re540_gazebo_paths.sh.em
rviz/: apriltag_rtabmap.rviz  ee478.rviz  local_planner_goto.rviz  mission.rviz  my.rviz  rtab_wheel_odom.rviz  yolo.rviz
scripts/: analyze_phase_drift.py  apriltag_global_localizer.py  arm_home_node.py  drive_straight.py  go_to_goal.py  go_to_goal_avoid.py  mission_viz_publisher.py  odom_compare_viz.py  pickup_point_estimator.py  plot_BA_comparison.py  plot_sweep_v2_per_bag.py  rtab_path_filter.py  run_eval_BA.sh  run_eval_all.sh  run_eval_one.sh  run_eval_sim.sh  run_eval_stock.sh  run_rotation_drift_test.sh  slam_aliases.sh  storefront_dataset_collector.py  sweep_resetcountdown.sh  teleop_keyboard.py  wheel_odom_node.py  yolo_pose_tag_detector.py
training/storefront_yolo/: README.md  export_yolo.py  prepare_cvat_yolo.py  requirements.txt  train_yolo.py
